Fix height :bug: on safari (#5)

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -8,7 +8,7 @@ body {
 
 
 [role=application] {
-  height: initial;
+  height: inherit;
   flex: 1 100vh;
 }
 
